attention les merge

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
     </nav>
     <img width="100%" src="./static/img/club_des_cinq.jpg">
-    <h3 id="team" class="text-center font-weight-bold">Etudiants en web à HETIC, nous sommes le club des cinq de la promotion 2017 à la recherche des points perdus !</h3>
+    <h3 style="margin-top: 30px;margin-bottom: 30px" id="team" class="text-center font-weight-bold">Etudiants en web à HETIC, nous sommes le club des cinq de la promotion 2017 à la recherche des points perdus !</h3>
 <!--     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Le club des Cinq</a>
     </nav>
@@ -45,7 +45,7 @@
       <div class="col-sm text-center"><h4>Mayeul<br>aka<br>« Harry Potter »</h4></div>
       <div class="col-sm text-center"><h4>Quentin<br>aka<br>«  L’indécis »</h4></div>
     </div>
-    <div class="row">
+    <div class="row" style="margin-bottom: 30px">
       <div class="col-sm text-center"><h5>ecchi goddess</h5></div>
       <div class="col-sm text-center"><h5>la sagesse incarnée</h5></div>
       <div class="col-sm text-center"><h5>le rat de bibliothèque</h5></div>
@@ -56,7 +56,9 @@
     <div style="border-top: 1px solid #000; margin-top: 110px;-moz-transform: rotate(7.5deg);-o-transform: rotate(7.5deg);-webkit-transform: rotate(7.5deg);-ms-transform: rotate(7.5deg);transform: rotate(7.5deg);"></div>
 
     <section id="techno">
-      <h2>Techno</h2>
+      <div class="row">
+        <div class="col-sm-4 text-center"><h2>Techno</h2></div>
+      </div>
       <div class="row">
         <div class="col-sm-2 text-center"><h5>HTML</h5></div>
         <div class="col-sm-2 text-center"><h5>CSS</h5></div>
@@ -77,12 +79,14 @@
       </div>
     </section>
 
-    <section class="footer">
-      <img width="30px" style="float: left;" src="./static/img/copyright_2.png">
-      <h3 class="text-center">Web P2020</h3>
-      <img width="100px" style="float: right;" src="./static/img/logo.jpg">
+<!--     <section class="footer" style="margin-top: 30px">
+      <div class="row">
+        <div class="col-sm-1"><img width="30px" src="./static/img/copyright_2.png"></div>
+        <div class="col-sm-10"><h3 class="text-center">Web P2020</h3></div>
+        <div class="col-sm-1"><img width="100px" src="./static/img/logo.jpg"></div>
+      </div>
     </section>
-
+ -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
